Add basic styling, create base connector logic

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ APP_SHARE_DIR=var/share
 ###> symfony/routing ###
 DEFAULT_URI=http://localhost
 ###< symfony/routing ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
