--- a/composer.json
+++ b/composer.json
@@ -23,21 +23,22 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "doctrine/doctrine-bundle": "^3.2",
-        "doctrine/orm": "^3.6",
+        "doctrine/doctrine-bundle": "^3.2.2",
+        "doctrine/orm": "^3.6.2",
         "symfony/console": "^8.0.4",
         "symfony/dotenv": "^8.0",
         "symfony/flex": "^2.10",
-        "symfony/form": "^8.0",
+        "symfony/form": "^8.0.4",
         "symfony/framework-bundle": "^8.0.5",
-        "symfony/http-client": "^8.0",
-        "symfony/intl": "^8.0",
-        "symfony/monolog-bundle": "^4.0",
+        "symfony/http-client": "^8.0.5",
+        "symfony/intl": "^8.0.4",
+        "symfony/messenger": "^8.0.4",
+        "symfony/monolog-bundle": "^4.0.1",
         "symfony/runtime": "^8.0.1",
-        "symfony/string": "^8.0",
-        "symfony/translation": "^8.0",
-        "symfony/twig-bundle": "^8.0",
-        "symfony/validator": "^8.0",
+        "symfony/string": "^8.0.4",
+        "symfony/translation": "^8.0.4",
+        "symfony/twig-bundle": "^8.0.4",
+        "symfony/validator": "^8.0.5",
         "symfony/yaml": "^8.0.1",
         "twig/extra-bundle": "^3.23",
         "twig/intl-extra": "^3.23",
@@ -99,19 +100,19 @@
     },
     "require-dev": {
         "ekino/phpstan-banned-code": "^3.0",
-        "friendsofphp/php-cs-fixer": "^3.94",
+        "friendsofphp/php-cs-fixer": "^3.94.1",
         "infection/infection": "^0.32.4",
-        "phpstan/extension-installer": "^1.4",
-        "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-doctrine": "^2.0",
-        "phpstan/phpstan-phpunit": "^2.0",
-        "phpstan/phpstan-symfony": "^2.0",
-        "phpunit/phpunit": "^13.0",
-        "symfony/browser-kit": "^8.0",
+        "phpstan/extension-installer": "^1.4.3",
+        "phpstan/phpstan": "^2.1.39",
+        "phpstan/phpstan-doctrine": "^2.0.17",
+        "phpstan/phpstan-phpunit": "^2.0.16",
+        "phpstan/phpstan-symfony": "^2.0.14",
+        "phpunit/phpunit": "^13.0.5",
+        "symfony/browser-kit": "^8.0.4",
         "symfony/css-selector": "^8.0",
         "symfony/debug-bundle": "^8.0",
-        "symfony/phpunit-bridge": "^8.0",
+        "symfony/phpunit-bridge": "^8.0.3",
         "symfony/stopwatch": "^8.0",
-        "symfony/web-profiler-bundle": "^8.0"
+        "symfony/web-profiler-bundle": "^8.0.4"
     }
 }
