--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,7 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=98b8cdab2b0d08ce1b6e324c9b0fa7ac
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=sync://
+###< symfony/messenger ###
