--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -9,7 +9,7 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
 [program:worker]
-command=php bin/console messenger:consume async --time-limit=3600
+command=php bin/console messenger:consume async scheduler_default --time-limit=3600
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
