--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/messenger": "^8.0.4",
         "symfony/monolog-bundle": "^4.0.1",
         "symfony/runtime": "^8.0.1",
+        "symfony/scheduler": "^8.0.4",
         "symfony/string": "^8.0.4",
         "symfony/translation": "^8.0.4",
         "symfony/twig-bundle": "^8.0.4",
@@ -101,7 +102,7 @@
     "require-dev": {
         "ekino/phpstan-banned-code": "^3.0",
         "friendsofphp/php-cs-fixer": "^3.94.1",
-        "infection/infection": "^0.32.4",
+        "infection/infection": "^0.32.5",
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan": "^2.1.39",
         "phpstan/phpstan-doctrine": "^2.0.17",
